Replication Framework/services_creators/yamls-to-apply/checkoutservice-apply/checkoutservice-deploy-2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: checkoutservice-2
spec:
  selector:
    matchLabels:
      app: checkoutservice-2
  template:
    metadata:
      labels:
        app: checkoutservice-2
    spec:
      containers:
      - env:
        - name: PORT
          value: '39724'
        - name: PRODUCT_CATALOG_SERVICE_ADDR
          value: productcatalogservice-1:23628
        - name: SHIPPING_SERVICE_ADDR
          value: shippingservice-2:34213
        - name: PAYMENT_SERVICE_ADDR
          value: paymentservice-2:53096
        - name: EMAIL_SERVICE_ADDR
          value: emailservice-2:52890
        - name: CURRENCY_SERVICE_ADDR
          value: currencyservice-2:9799
        - name: CART_SERVICE_ADDR
          value: cartservice-1:7070
        image: gcr.io/google-samples/microservices-demo/checkoutservice:v0.5.0
        livenessProbe:
          exec:
            command:
            - /bin/grpc_health_probe
            - -addr=:39724
        name: server
        ports:
        - containerPort: 39724
        readinessProbe:
          exec:
            command:
            - /bin/grpc_health_probe
            - -addr=:39724
        resources:
          limits:
            cpu: 200m
            memory: 128Mi
          requests:
            cpu: 100m
            memory: 64Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - all
          privileged: false
          readOnlyRootFilesystem: true
      securityContext:
        fsGroup: 1000
        runAsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
      serviceAccountName: default
