Replication Framework/services_creators/yamls-to-apply/checkoutservice-apply/checkoutservice-deploy-3.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: checkoutservice-3
spec:
  selector:
    matchLabels:
      app: checkoutservice-3
  template:
    metadata:
      labels:
        app: checkoutservice-3
    spec:
      containers:
      - env:
        - name: PORT
          value: '50442'
        - name: PRODUCT_CATALOG_SERVICE_ADDR
          value: productcatalogservice-3:32537
        - name: SHIPPING_SERVICE_ADDR
          value: shippingservice-3:3148
        - name: PAYMENT_SERVICE_ADDR
          value: paymentservice-3:35556
        - name: EMAIL_SERVICE_ADDR
          value: emailservice-3:56335
        - name: CURRENCY_SERVICE_ADDR
          value: currencyservice-3:3197
        - name: CART_SERVICE_ADDR
          value: cartservice-1:7070
        image: gcr.io/google-samples/microservices-demo/checkoutservice:v0.5.0
        livenessProbe:
          exec:
            command:
            - /bin/grpc_health_probe
            - -addr=:50442
        name: server
        ports:
        - containerPort: 50442
        readinessProbe:
          exec:
            command:
            - /bin/grpc_health_probe
            - -addr=:50442
        resources:
          limits:
            cpu: 200m
            memory: 128Mi
          requests:
            cpu: 100m
            memory: 64Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - all
          privileged: false
          readOnlyRootFilesystem: true
      securityContext:
        fsGroup: 1000
        runAsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
      serviceAccountName: default
