Replication Framework/services_creators/yamls-to-apply/checkoutservice-apply/checkoutservice-svc-2.yaml
apiVersion: v1
kind: Service
metadata:
  name: checkoutservice-2
spec:
  ports:
  - name: grpc
    port: 39724
    targetPort: 39724
  selector:
    app: checkoutservice-2
  type: ClusterIP
