Replication Framework/services_creators/yamls-to-apply/checkoutservice-apply/checkoutservice-svc-5.yaml
apiVersion: v1
kind: Service
metadata:
  name: checkoutservice-5
spec:
  ports:
  - name: grpc
    port: 23193
    targetPort: 23193
  selector:
    app: checkoutservice-5
  type: ClusterIP
