Replication Framework/services_creators/yamls-to-apply/checkoutservice-apply/checkoutservice-netpol-2-frontend-14.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: checkoutservice-2-allow-frontend-14
  namespace: attack-graphs
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: frontend-14
    ports:
    - port: 18028
  podSelector:
    matchLabels:
      app: checkoutservice-2
