Replication Framework/services_creators/yamls-to-apply/checkoutservice-apply/checkoutservice-netpol-5-frontend-5.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: checkoutservice-5-allow-frontend-5
  namespace: attack-graphs
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: frontend-5
    ports:
    - port: 23193
  podSelector:
    matchLabels:
      app: checkoutservice-5
